--- a/google.html
+++ b/google.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng ký</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/coding.css">
-    <link rel="stylesheet" href="css/modal.css">
-    <link rel="stylesheet" href="css/navigation.css">
-    <link rel="stylesheet" href="css/common-buttons.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/loading.css">
-    <link rel="stylesheet" href="css/google.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/coding.css">
+    <link rel="stylesheet" href="./css/modal.css">
+    <link rel="stylesheet" href="./css/navigation.css">
+    <link rel="stylesheet" href="./css/common-buttons.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/loading.css">
+    <link rel="stylesheet" href="./css/google.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-    <script src="js/pdfManager.js" defer></script>
-    <script src="js/preview.js" defer></script>
-    <script src="js/coding.js" defer></script>
-    <script src="js/chart.js" defer></script>
-    <script type="module" src="js/google.js"></script>
+    <script src="./js/pdfManager.js" defer></script>
+    <script src="./js/preview.js" defer></script>
+    <script src="./js/coding.js" defer></script>
+    <script src="./js/chart.js" defer></script>
+    <script type="module" src="./js/google.js"></script>
 </head>
 <body>
   <div class="auth-page">
