--- a/detailScratch.html
+++ b/detailScratch.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chi Tiết Đánh Giá 4 Buổi - Scratch</title>
-    <link rel="stylesheet" href="css/detail.css">
+    <link rel="stylesheet" href="./css/detail.css">
 </head>
 <body>
 
@@ -460,6 +460,6 @@
     </div>
   </div>
 
-  <script type="module" src="js/details.js"></script>
+  <script type="module" src="./js/details.js"></script>
 </body>
 </html>
