--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Teacher Dashboard</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/common-buttons.css">
-  <link rel="stylesheet" href="css/teacher.css">
+  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/common-buttons.css">
+  <link rel="stylesheet" href="./css/teacher.css">
 </head>
 
 <body>
@@ -85,90 +85,88 @@
   </div>
 
   <!-- STUDENTS MODAL -->
-<div id="studentsModal" class="modal-overlay" style="display:none;">
-  <div class="modal-box" role="dialog" aria-modal="true">
+  <div id="studentsModal" class="modal-overlay" style="display:none;">
+    <div class="modal-box" role="dialog" aria-modal="true">
 
-    <div class="modal-head">
-      <div>
-        <div class="modal-title">Danh sách học sinh</div>
-        <div class="modal-sub" id="modalClassInfo">—</div>
+      <div class="modal-head">
+        <div>
+          <div class="modal-title">Danh sách học sinh</div>
+          <div class="modal-sub" id="modalClassInfo">—</div>
+        </div>
+
+        <button class="btn-shadow btn-small btn-ghost" id="btnCloseStudentsModal">Đóng</button>
       </div>
 
-      <button class="btn-shadow btn-small btn-ghost" id="btnCloseStudentsModal">Đóng</button>
-    </div>
+      <div class="modal-toolbar">
+        <input id="studentSearchInput" placeholder="Tìm theo ID / tên học sinh..." />
 
-    <div class="modal-toolbar">
-      <input id="studentSearchInput" placeholder="Tìm theo ID / tên học sinh..." />
+        <button class="btn-shadow btn-primary" id="btnToggleCreateStudent">
+          + Thêm học sinh
+        </button>
+      </div>
 
-      <button class="btn-shadow btn-primary" id="btnToggleCreateStudent">
-        + Thêm học sinh
-      </button>
-    </div>
+      <!-- FORM CREATE STUDENT -->
+      <div id="studentForm" class="student-form" style="display:none;">
+        <div class="form-row">
+          <div class="form-group">
+            <label>Họ tên</label>
+            <input id="studentName" placeholder="VD: Nguyễn A" />
+          </div>
 
-    <!-- FORM CREATE STUDENT -->
-    <div id="studentForm" class="student-form" style="display:none;">
-      <div class="form-row">
-        <div class="form-group">
-          <label>Họ tên</label>
-          <input id="studentName" placeholder="VD: Nguyễn A" />
+          <div class="form-group">
+            <label>Lớp</label>
+            <input id="studentClass" placeholder="VD: 8" />
+          </div>
+
+          <div class="form-group">
+            <label>Môn</label>
+            <select id="studentSubject">
+              <option value="Scratch">Scratch</option>
+              <option value="GameMaker">GameMaker</option>
+            </select>
+          </div>
+
+          <div class="form-group">
+            <label>Giáo viên hướng dẫn</label>
+            <input id="studentTeacherName" placeholder="VD: Thầy A / Cô B" />
+          </div>
+
+          <div class="form-group">
+            <label>Ngày trải nghiệm</label>
+            <input id="studentExperienceDate" type="date" />
+          </div>
         </div>
 
-        <div class="form-group">
-          <label>Lớp</label>
-          <input id="studentClass" placeholder="VD: 8" />
-        </div>
-
-        <div class="form-group">
-          <label>Môn</label>
-          <select id="studentSubject">
-            <option value="Scratch">Scratch</option>
-            <option value="GameMaker">GameMaker</option>
-          </select>
-        </div>
-
-        <div class="form-group">
-          <label>Giáo viên hướng dẫn</label>
-          <input id="studentTeacherName" placeholder="VD: Thầy A / Cô B" />
-        </div>
-
-        <div class="form-group">
-          <label>Ngày trải nghiệm</label>
-          <input id="studentExperienceDate" type="date" />
+        <div class="form-actions">
+          <button class="btn-shadow btn-ghost" id="btnCancelStudent">Hủy</button>
+          <button class="btn-shadow btn-primary" id="btnSaveStudent">Lưu học sinh</button>
         </div>
       </div>
 
-      <div class="form-actions">
-        <button class="btn-shadow btn-ghost" id="btnCancelStudent">Hủy</button>
-        <button class="btn-shadow btn-primary" id="btnSaveStudent">Lưu học sinh</button>
+      <!-- TABLE STUDENTS -->
+      <div class="table-wrap">
+        <table class="data-table">
+          <thead>
+            <tr>
+              <th style="width:160px;">ID</th>
+              <th>Họ tên</th>
+              <th style="width:100px;">Lớp</th>
+              <th style="width:140px;">Môn</th>
+              <th style="width:160px;">Cập nhật</th>
+              <th style="width:200px;">Hành động</th>
+            </tr>
+          </thead>
+
+          <tbody id="studentsTbody">
+            <tr>
+              <td colspan="6" class="empty-td">Chưa chọn lớp.</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
+
     </div>
-
-    <!-- TABLE STUDENTS -->
-    <div class="table-wrap">
-      <table class="data-table">
-        <thead>
-          <tr>
-            <th style="width:160px;">ID</th>
-            <th>Họ tên</th>
-            <th style="width:100px;">Lớp</th>
-            <th style="width:140px;">Môn</th>
-            <th style="width:160px;">Cập nhật</th>
-            <th style="width:200px;">Hành động</th>
-          </tr>
-        </thead>
-
-        <tbody id="studentsTbody">
-          <tr>
-            <td colspan="6" class="empty-td">Chưa chọn lớp.</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
   </div>
-</div>
-
-
   <script type="module" src="./js/teacher.js"></script>
 </body>
 </html>
